# aura

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pubspec.yaml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
android/app/: build.gradle.kts  proguard-rules.pro
docs/: antigravity_aura_story_cover_brief.md
docs/branding/: antigravity_cover_prompt_zh.md  antigravity_story_cover_brief.md
integration_test/: chat_regression_test.dart  import_source_sheet_test.dart  imported_png_story_flow_test.dart  readme_capture_test.dart  real_device_chat_flow_test.dart
ios/: AuraLiteRTNative.podspec  Podfile
ios/Frameworks/: README.md
ios/Runner/: AppDelegate.swift  AuraLiteRTBridge.swift  Info.plist  (+1 more)
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
scripts/: build_ios_device_no_codesign.sh  build_ios_simulator.sh  build_release_android_arm64.sh
test/: app_pages_test.dart  app_state_provider_test.dart  branding_assets_test.dart  built_in_cover_assets_test.dart  character_editor_dialog_test.dart  character_library_store_test.dart  chat_page_test.dart  device_profile_probe_test.dart  file_selector_type_groups_test.dart  format_bytes_test.dart  full_chain_flow_test.dart  import_preview_dialog_test.dart  litert_method_channel_gateway_test.dart  widget_test.dart
test_driver/: readme_capture.dart
tooling/ios/litert_native/: AuraLiteRTNative.h  AuraLiteRTNative.mm  BUILD.bazel
(+56 files in other folders)
